Update subscription patch body
