# node-sdk/src/openapi/models/Invoice.ts
@@ -31,28 +31,28 @@ export class Invoice {
     'object': string;
     'test': boolean;
     'account': string | Account;
-    'amount': number;
+    'platform_account'?: string | Account;
     'amount_paid'?: number;
     'application_fee_percent'?: number;
     'chain': InvoiceChainEnum;
+    'amount': number;
     'currency': InvoiceCurrencyEnum;
-    'customer': string | Customer;
-    'due'?: number;
-    'fees': Array<Fee>;
-    'line_items'?: InvoiceAllOfLineItems;
-    'metadata'?: any;
-    'number': string;
-    'payment'?: Payment;
-    'period'?: string | SubscriptionPeriod;
-    'platform_account'?: string | Account;
-    'price': string | Price;
-    'send_reminders'?: string;
     'status': InvoiceStatusEnum;
-    'subscription'?: string | Subscription;
-    'transactions': Array<Transaction>;
-    'transfers': Array<Transfer>;
-    'trial_period_duration'?: number;
+    'due'?: number;
+    'number': string;
+    'customer': string | Customer;
+    'price': string | Price;
     'wallet': string | Wallet;
+    'payment'?: Payment;
+    'transactions': Array<Transaction>;
+    'fees': Array<Fee>;
+    'transfers': Array<Transfer>;
+    'subscription'?: string | Subscription;
+    'line_items'?: InvoiceAllOfLineItems;
+    'trial_period_duration'?: number;
+    'send_reminders'?: string;
+    'period'?: string | SubscriptionPeriod;
+    'metadata'?: any;
 
     static readonly discriminator: string | undefined = undefined;
 
@@ -88,9 +88,9 @@ export class Invoice {
             "format": ""
         },
         {
-            "name": "amount",
-            "baseName": "amount",
-            "type": "number",
+            "name": "platform_account",
+            "baseName": "platform_account",
+            "type": "string | Account",
             "format": ""
         },
         {
@@ -112,75 +112,15 @@ export class Invoice {
             "format": ""
         },
         {
+            "name": "amount",
+            "baseName": "amount",
+            "type": "number",
+            "format": ""
+        },
+        {
             "name": "currency",
             "baseName": "currency",
             "type": "InvoiceCurrencyEnum",
-            "format": ""
-        },
-        {
-            "name": "customer",
-            "baseName": "customer",
-            "type": "string | Customer",
-            "format": ""
-        },
-        {
-            "name": "due",
-            "baseName": "due",
-            "type": "number",
-            "format": "date-time"
-        },
-        {
-            "name": "fees",
-            "baseName": "fees",
-            "type": "Array<Fee>",
-            "format": ""
-        },
-        {
-            "name": "line_items",
-            "baseName": "line_items",
-            "type": "InvoiceAllOfLineItems",
-            "format": ""
-        },
-        {
-            "name": "metadata",
-            "baseName": "metadata",
-            "type": "any",
-            "format": ""
-        },
-        {
-            "name": "number",
-            "baseName": "number",
-            "type": "string",
-            "format": ""
-        },
-        {
-            "name": "payment",
-            "baseName": "payment",
-            "type": "Payment",
-            "format": ""
-        },
-        {
-            "name": "period",
-            "baseName": "period",
-            "type": "string | SubscriptionPeriod",
-            "format": ""
-        },
-        {
-            "name": "platform_account",
-            "baseName": "platform_account",
-            "type": "string | Account",
-            "format": ""
-        },
-        {
-            "name": "price",
-            "baseName": "price",
-            "type": "string | Price",
-            "format": ""
-        },
-        {
-            "name": "send_reminders",
-            "baseName": "send_reminders",
-            "type": "string",
             "format": ""
         },
         {
@@ -190,9 +130,39 @@ export class Invoice {
             "format": ""
         },
         {
-            "name": "subscription",
-            "baseName": "subscription",
-            "type": "string | Subscription",
+            "name": "due",
+            "baseName": "due",
+            "type": "number",
+            "format": "date-time"
+        },
+        {
+            "name": "number",
+            "baseName": "number",
+            "type": "string",
+            "format": ""
+        },
+        {
+            "name": "customer",
+            "baseName": "customer",
+            "type": "string | Customer",
+            "format": ""
+        },
+        {
+            "name": "price",
+            "baseName": "price",
+            "type": "string | Price",
+            "format": ""
+        },
+        {
+            "name": "wallet",
+            "baseName": "wallet",
+            "type": "string | Wallet",
+            "format": ""
+        },
+        {
+            "name": "payment",
+            "baseName": "payment",
+            "type": "Payment",
             "format": ""
         },
         {
@@ -202,9 +172,27 @@ export class Invoice {
             "format": ""
         },
         {
+            "name": "fees",
+            "baseName": "fees",
+            "type": "Array<Fee>",
+            "format": ""
+        },
+        {
             "name": "transfers",
             "baseName": "transfers",
             "type": "Array<Transfer>",
+            "format": ""
+        },
+        {
+            "name": "subscription",
+            "baseName": "subscription",
+            "type": "string | Subscription",
+            "format": ""
+        },
+        {
+            "name": "line_items",
+            "baseName": "line_items",
+            "type": "InvoiceAllOfLineItems",
             "format": ""
         },
         {
@@ -214,9 +202,21 @@ export class Invoice {
             "format": ""
         },
         {
-            "name": "wallet",
-            "baseName": "wallet",
-            "type": "string | Wallet",
+            "name": "send_reminders",
+            "baseName": "send_reminders",
+            "type": "string",
+            "format": ""
+        },
+        {
+            "name": "period",
+            "baseName": "period",
+            "type": "string | SubscriptionPeriod",
+            "format": ""
+        },
+        {
+            "name": "metadata",
+            "baseName": "metadata",
+            "type": "any",
             "format": ""
         }    ];
 
